Add html header block

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,8 @@
     </head>
 
     <body>
+        {% block header %}{% endblock %}
+
         {% block content %}
         {% endblock %}
     </body>
