--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
             <div class="inner d-flex justify-content-around">
                 <h3 class="masthead-brand">Task Manager</h3>
                 <nav class="nav nav-masthead justify-content-center">
-                <a class="nav-link" href="#">Tasks</a>
+                <a class="nav-link" href="/tasks">Tasks</a>
                 <a class="nav-link" href="#">Profile</a>
                 </nav>
             </div>
