--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
         <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
     </head>
 
-    <body>
+    <body class="text-center bg-dark text-white">
         {% block header %}{% endblock %}
 
         {% block content %}
