--- a/templates/tasks/index.html
+++ b/templates/tasks/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header %}
-<h1>Tasks</h1>
+<h1>Tasks for {{user.email}}</h1>
 {% endblock %}
 
 {% block content %}
