--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,18 @@
     </head>
 
     <body class="text-center bg-dark text-white">
+        <header class="masthead mb-auto">
+            <div class="inner d-flex justify-content-around">
+                <h3 class="masthead-brand">Task Manager</h3>
+                <nav class="nav nav-masthead justify-content-center">
+                {% if request.user.is_authenticated %}
+                <a class="nav-link" href="/tasks">Tasks</a>
+                <a class="nav-link" href="/accounts/profile">Profile</a>
+                <a class="nav-link" href="/logout">Logout</a>
+                {% endif %}
+              </nav>
+            </div>
+        </header>
         {% block header %}{% endblock %}
 
         {% block content %}
