--- a/templates/base.html
+++ b/templates/base.html
@@ -25,21 +25,27 @@
     </head>
 
     <body class="text-center bg-dark text-white">
-        <header class="masthead mb-auto">
-            <div class="inner d-flex justify-content-around">
-                <h3 class="masthead-brand">Task Manager</h3>
-                <nav class="nav nav-masthead justify-content-center">
-                {% if request.user.is_authenticated %}
-                <a class="nav-link" href="/tasks">Tasks</a>
-                <a class="nav-link" href="/accounts/profile">Profile</a>
-                <a class="nav-link" href="/logout">Logout</a>
-                {% endif %}
-              </nav>
-            </div>
-        </header>
-        {% block header %}{% endblock %}
+        <div class="container">
+            <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+                <header class="masthead mb-auto">
+                    <div class="inner d-flex justify-content-around">
+                        <h3 class="masthead-brand">Task Manager</h3>
+                        <nav class="nav nav-masthead justify-content-center">
+                        {% if request.user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'tasks:index' %}">Tasks</a>
+                        <a class="nav-link" href="{% url 'accounts:profile' %}">Profile</a>
+                        <a class="nav-link" href="{% url 'accounts:logot' %}">Logout</a>
+                        {% else %}
+                        <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+                        <a class="nav-link" href="{% url 'accounts:registration' %}">Sign Up</a>
+                        {% endif %}
+                        </nav>
+                    </div>
+                </header>
 
-        {% block content %}
-        {% endblock %}
+                {% block title %}{% endblock %}
+                {% block content %}{% endblock %}
+            </div>
+        </div>
     </body>
 </html>
