--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
         <main role="main" class="inner cover">
             <h1 class="cover-heading">Manage your tasks</h1>
             <p class="lead">
@@ -10,7 +8,7 @@
                 authentication, task management, filtration.
             </p>
             <p class="lead">
-                <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+                <a href="{% url 'accounts:login' %}" class="btn btn-lg btn-secondary">Login</a>
             </p>
         </main>
 
@@ -21,6 +19,4 @@
                 </p>
             </div>
         </footer>
-    </div>
-</div>
 {% endblock %}
