--- a/templates/base.html
+++ b/templates/base.html
@@ -24,28 +24,32 @@
         <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
     </head>
 
-    <body class="text-center bg-dark text-white">
-        <div class="container">
-            <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-                <header class="masthead mb-auto">
-                    <div class="inner d-flex justify-content-around">
-                        <h3 class="masthead-brand">Task Manager</h3>
-                        <nav class="nav nav-masthead justify-content-center">
-                        {% if request.user.is_authenticated %}
-                        <a class="nav-link" href="{% url 'tasks:index' %}">Tasks</a>
-                        <a class="nav-link" href="{% url 'accounts:profile' %}">Profile</a>
-                        <a class="nav-link" href="{% url 'accounts:logot' %}">Logout</a>
-                        {% else %}
-                        <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
-                        <a class="nav-link" href="{% url 'accounts:registration' %}">Sign Up</a>
-                        {% endif %}
-                        </nav>
-                    </div>
-                </header>
-
-                {% block title %}{% endblock %}
-                {% block content %}{% endblock %}
+    <body>
+        <header class="masthead mb-auto">
+            <div class="inner d-flex justify-content-around">
+                <h3 class="masthead-brand">Task Manager</h3>
+                <nav class="nav nav-masthead justify-content-center">
+                {% if request.user.is_authenticated %}
+                <a class="nav-link" href="{% url 'tasks:index' %}">Tasks</a>
+                <a class="nav-link" href="{% url 'accounts:profile' %}">Profile</a>
+                <a class="nav-link" href="{% url 'accounts:logot' %}">Logout</a>
+                {% else %}
+                <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+                <a class="nav-link" href="{% url 'accounts:registration' %}">Sign Up</a>
+                {% endif %}
+                </nav>
             </div>
-        </div>
+        </header>
+
+        {% block title %}{% endblock %}
+        {% block content %}{% endblock %}
+
+        <footer class="mastfoot mt-auto">
+            <div class="inner">
+                <p>
+                    <a href="https://github.com/Uladzislau97/python-project-lvl4" target="blank">Source code</a>
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
