--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="container">
         <main role="main" class="inner cover">
             <h1 class="cover-heading">Manage your tasks</h1>
             <p class="lead">
@@ -12,11 +13,5 @@
             </p>
         </main>
 
-        <footer class="mastfoot mt-auto">
-            <div class="inner">
-                <p>
-                    <a href="https://github.com/Uladzislau97/python-project-lvl4" target="blank">Source code</a>
-                </p>
-            </div>
-        </footer>
+</div>
 {% endblock %}
