--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                 {% if request.user.is_authenticated %}
                 <a class="nav-link" href="{% url 'tasks:index' %}">Tasks</a>
                 <a class="nav-link" href="{% url 'accounts:profile' %}">Profile</a>
-                <a class="nav-link" href="{% url 'accounts:logot' %}">Logout</a>
+                <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
                 {% else %}
                 <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
                 <a class="nav-link" href="{% url 'accounts:registration' %}">Sign Up</a>
