Customize password change

--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -3,4 +3,6 @@
 
 {% block content %}
 Profile page {{ user.email }}
+
+<a href="{% url 'accounts:password_change' %}">Change Password</a>
 {% endblock %}
