--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                 <h3 class="masthead-brand">Task Manager</h3>
                 <nav class="nav nav-masthead justify-content-center">
                 {% if request.user.is_authenticated %}
-                <a class="nav-link" href="{% url 'tasks:index' %}">Tasks</a>
+                <a class="nav-link" href="{% url 'tasks:task_list' %}">Tasks</a>
                 <a class="nav-link" href="{% url 'accounts:profile' %}">Profile</a>
                 <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
                 {% else %}
@@ -43,13 +43,5 @@
 
         {% block title %}{% endblock %}
         {% block content %}{% endblock %}
-
-        <footer class="mastfoot mt-auto">
-            <div class="inner">
-                <p>
-                    <a href="https://github.com/Uladzislau97/python-project-lvl4" target="blank">Source code</a>
-                </p>
-            </div>
-        </footer>
     </body>
 </html>
