--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,8 @@
                 <nav class="nav nav-masthead justify-content-center">
                 {% if request.user.is_authenticated %}
                 <a class="nav-link" href="{% url 'tasks:task_list' %}">Tasks</a>
+                <a class="nav-link" href="{% url 'tasks:task_status_list' %}">Statuses</a>
+                <a class="nav-link" href="{% url 'tasks:tag_list' %}">Tags</a>
                 <a class="nav-link" href="{% url 'accounts:profile' %}">Profile</a>
                 <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
                 {% else %}
