--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -7,7 +7,10 @@
 {% block content %}
 <ul>
     {% for task in object_list %}
-      <li>{{ task.name }}</li>
+        <li>
+            <p>{{ task.name }}</p>
+            <p><a href="{% url 'tasks:taks_edit' task.id %}">Edit</a></p>
+        </li>
     {% empty %}
       <li>No tasks yet.</li>
     {% endfor %}
