--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -9,7 +9,8 @@
     {% for task in object_list %}
         <li>
             <p>{{ task.name }}</p>
-            <p><a href="{% url 'tasks:taks_edit' task.id %}">Edit</a></p>
+            <p><a href="{% url 'tasks:task_edit' task.id %}">Edit</a></p>
+            <p><a href="{% url 'tasks:task_delete' task.id %}">Delete</a></p>
         </li>
     {% empty %}
       <li>No tasks yet.</li>
