--- a/templates/tasks/task_detail.html
+++ b/templates/tasks/task_detail.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <h2>{{object.name}}</h2>
 <p>Description: {{description}}</p>
 <p>Status: {{object.status}}</p>
@@ -17,3 +20,4 @@
     {% endfor %}
   </ul>
 </p>
+{% endblock %}
