--- a/templates/base.html
+++ b/templates/base.html
@@ -26,19 +26,19 @@
 
     <body>
         <header class="masthead mb-auto">
-            <div class="inner d-flex justify-content-around">
-                <h3 class="masthead-brand">Task Manager</h3>
+            <div class="inner d-flex justify-content-around bg-success p-2">
+                <h3 class="masthead-brand text-white">Task Manager</h3>
                 <nav class="nav nav-masthead justify-content-center">
-                {% if request.user.is_authenticated %}
-                <a class="nav-link" href="{% url 'tasks:task_list' %}">Tasks</a>
-                <a class="nav-link" href="{% url 'tasks:task_status_list' %}">Statuses</a>
-                <a class="nav-link" href="{% url 'tasks:tag_list' %}">Tags</a>
-                <a class="nav-link" href="{% url 'accounts:profile' %}">Profile</a>
-                <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
-                {% else %}
-                <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
-                <a class="nav-link" href="{% url 'accounts:registration' %}">Sign Up</a>
-                {% endif %}
+                  {% if request.user.is_authenticated %}
+                  <a class="nav-link text-white" href="{% url 'tasks:task_list' %}">Tasks</a>
+                  <a class="nav-link text-white" href="{% url 'tasks:task_status_list' %}">Statuses</a>
+                  <a class="nav-link text-white" href="{% url 'tasks:tag_list' %}">Tags</a>
+                  <a class="nav-link text-white" href="{% url 'accounts:profile' %}">Profile</a>
+                  <a class="nav-link text-white" href="{% url 'accounts:logout' %}">Logout</a>
+                  {% else %}
+                  <a class="nav-link text-white" href="{% url 'accounts:login' %}">Login</a>
+                  <a class="nav-link text-white" href="{% url 'accounts:registration' %}">Sign Up</a>
+                  {% endif %}
                 </nav>
             </div>
         </header>
