--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
-        <main role="main" class="inner cover">
+<div class="row h-100 mt-5 pt-5">
+    <div class="col-sm-12 mt-5 pt-5">
+        <main role="main" class="inner cover text-center w-75 m-auto">
             <h1 class="cover-heading">Manage your tasks</h1>
             <p class="lead">
                 Systems supports: registration,
                 authentication, task management, filtration.
             </p>
             <p class="lead">
-                <a href="{% url 'accounts:login' %}" class="btn btn-lg btn-secondary">Login</a>
+                <a href="{% url 'accounts:login' %}" class="btn btn-lg btn-success">
+                    Login
+                </a>
             </p>
         </main>
-
+    </div>
 </div>
 {% endblock %}
