Add style to login and registration forms

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
             </div>
         </header>
 
-        <div class="container min-vh-100">
+        <div class="container">
             <h2>{% block title %}{% endblock %}</h2>
             {% block content %}{% endblock %}
         </div>
