--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="row h-100 mt-5 pt-5">
+<div class="row h-auto mt-5 pt-5">
     <div class="col-sm-12 mt-5 pt-5">
         <main role="main" class="inner cover text-center w-75 m-auto">
             <h1 class="cover-heading">Manage your tasks</h1>
