--- a/templates/base.html
+++ b/templates/base.html
@@ -43,8 +43,7 @@
             </div>
         </header>
 
-        <div class="container">
-            <h2>{% block title %}{% endblock %}</h2>
+        <div class="container p-5">
             {% block content %}{% endblock %}
         </div>
     </body>
