--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,8 +2,8 @@
 {% load bootstrap4 %}
 
 {% block content %}
-<div class="row h-auto mt-5 pt-5">
-    <div class="col-sm-8 mt-5 mx-auto">
+<div class="row h-auto mt-5">
+    <div class="col-sm-8 mx-auto">
         <div class="card">
             <div class="card-title bg-success text-white p-3">
                 <p class="h4">Login</p>
