--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 
 {% block content %}
-<div class="row h-auto mt-5">
+<div class="row h-auto">
     <div class="col-sm-8 mx-auto">
         <div class="card">
             <div class="card-title bg-success text-white p-3">
