Add style to password change form

--- a/templates/registration/password_change.html
+++ b/templates/registration/password_change.html
@@ -2,9 +2,20 @@
 {% load bootstrap4 %}
 
 {% block content %}
-<form action="{% url 'accounts:password_change' %}" method="post" class="form">
-    {% csrf_token %}
-    {% bootstrap_form form %}
-    {% bootstrap_button "Change password" %}
-</form>
+<div class="row h-auto">
+    <div class="col-sm-8 mx-auto">
+        <div class="card">
+            <div class="card-title bg-success text-white p-3">
+                <p class="h4">Change password</p>
+            </div>
+            <div class="card-body">
+                <form action="{% url 'accounts:password_change' %}" method="post" class="form">
+                    {% csrf_token %}
+                    {% bootstrap_form form %}
+                    {% bootstrap_button "Change password" button_class="btn-success" %}
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
