Add style to password change done page

--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -2,5 +2,18 @@
 {% load bootstrap4 %}
 
 {% block content %}
-<h1>DONE</h1>
+<div class="row h-auto">
+    <div class="col-sm-8 mx-auto pt-5">
+        <div class="card">
+            <div class="card-title bg-success text-white p-3">
+                <p class="h4">Password changed!</p>
+            </div>
+            <div class="card-body">
+                <a href="{% url 'accounts:profile' %}" class="btn btn-success">
+                    Back to profile page
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
