--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -1,27 +1,93 @@
 {% extends "base.html" %}
-
-{% block title %}
-<h1>Tasks for {{user.email}}</h1>
-{% endblock %}
+{% load bootstrap4 %}
 
 {% block content %}
-<form method="get">
-    {{ filter.form.as_p }}
-    <input type="submit" />
-</form>
-<a href="{% url 'tasks:task_list' %}">Clear filters</a>
-<a href="{% url 'tasks:task_list'  %}?assigned_to={{request.user.pk}}">My tasks</a>
-<ul>
-    {% for task in filter.qs %}
-        <li>
-            <p>{{ task.name }}</p>
-            <p><a href="{% url 'tasks:task_detail' task.id %}">Detail</a></p>
-            <p><a href="{% url 'tasks:task_edit' task.id %}">Edit</a></p>
-            <p><a href="{% url 'tasks:task_delete' task.id %}">Delete</a></p>
-        </li>
-    {% empty %}
-      <li>No tasks yet.</li>
-    {% endfor %}
-</ul>
-<a href="{% url 'tasks:task_add' %}">Add task</a>
+<p class="filter-buttons">
+    <a class="btn btn-success" data-toggle="collapse" href="#collapseFilter" role="button" aria-expanded="false" aria-controls="collapseFilter">
+        Filter form
+    </a>
+    <a href="{% url 'tasks:task_list' %}" class="btn btn-success">
+        Clear filters
+    </a>
+    <a href="{% url 'tasks:task_list' %}?assigned_to={{request.user.pk}}" class="btn btn-success">
+        My tasks
+    </a>
+</p>
+
+<div class="row h-auto collapse" id="collapseFilter">
+    <div class="col-sm-12 mx-auto">
+        <div class="card">
+            <div class="card-title bg-success text-white p-3">
+                <p class="h4">Task filter</p>
+            </div>
+            <div class="card-body">
+                <form method="get" class="form">
+                    {% csrf_token %}
+                    {% bootstrap_form filter.form %}
+                    {% bootstrap_button "Filter" button_class="btn-success" %}
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row h-auto mt-5">
+    <div class="col-sm-12 mx-auto">
+        <div class="card">
+            <div class="card-title bg-success text-white p-3">
+                <p class="h4">Tasks</p>
+            </div>
+            <div class="card-body">
+                {% if object_list|length > 0 %}
+                <div class="list-group list-group-flush">
+                    {% for task in object_list %}
+                    <div class="list-group-item row">
+                        <div>
+                            <span><b>{{ task }}</b></span>
+                            <span class="float-right ml-2">
+                                <a href="{% url 'tasks:task_delete' task.id %}" class="text-success">
+                                    Delete
+                                </a>
+                            </span>
+                            <span class="float-right ml-2">
+                                <a href="{% url 'tasks:task_edit' task.id %}" class="text-success">
+                                    Edit
+                                </a>
+                            </span>
+                            <span class="float-right ml-2">
+                                <a href="{% url 'tasks:task_detail' task.id %}" class="text-success">
+                                    Detail
+                                </a>
+                            </span>
+                        </div>
+                        <div class="mt-2">
+                            Assigned to:
+                            <span class="badge badge-primary badge-pill p-2">{{ task.assigned_to }}</span>
+                        </div>
+                        <div class="mt-2">
+                            Status:
+                            <span class="badge badge-warning badge-pill p-2">{{ task.status }}</span>
+                        </div>
+                        {% if tag_list|length > 0 %}
+                        <div class="mt-2">
+                            Tags:
+                            {% for tag in tag_list %}
+                            <span class="badge badge-info badge-pill p-2">{{ tag }}</span>
+                            {% endfor %}
+                        </div>
+                        {% endif %}
+                    </div>
+                    {% endfor %}
+                </div>
+                {% else %}
+                <p>No tasks</p>
+                {% endif %}
+
+                <a href="{% url 'tasks:task_add' %}" class="btn btn-success mt-4">
+                    Add task
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
