--- a/templates/tasks/statuses/task_status_list.html
+++ b/templates/tasks/statuses/task_status_list.html
@@ -13,7 +13,7 @@
                 <div class="list-group list-group-flush">
                     {% for status in object_list %}
                     <div class="list-group-item row">
-                        <span>{{ status }}</span>
+                        <span><b>{{ status }}</b></span>
                         <span class="float-right">
                             <a href="{% url 'tasks:task_status_delete' status.id %}" class="text-success">
                                 Delete
