--- a/templates/tasks/tags/tag_list.html
+++ b/templates/tasks/tags/tag_list.html
@@ -13,7 +13,7 @@
                 <div class="list-group list-group-flush">
                     {% for tag in object_list %}
                     <div class="list-group-item row">
-                        <span>{{ tag }}</span>
+                        <span><b>{{ tag }}</b></span>
                         <span class="float-right">
                             <a href="{% url 'tasks:tag_delete' tag.id %}" class="text-success">
                                 Delete
