--- a/templates/tasks/task_detail.html
+++ b/templates/tasks/task_detail.html
@@ -1,23 +1,44 @@
 {% extends "base.html" %}
+{% load bootstrap4 %}
 
 {% block content %}
-<h2>{{object.name}}</h2>
-<p>Description: {{description}}</p>
-<p>Status: {{object.status}}</p>
-<p>Creator: {{object.creator}}</p>
-
-{% if object.assigned_to %}
-<p>Assigned to: {{object.assigned_to}}</p>
-{% else %}
-<p>Not assigned</p>
-{% endif %}
-
-<p>
-  Tags:
-  <ul>
-    {% for tag in tag_list %}
-    <li>{{tag}}</li>
-    {% endfor %}
-  </ul>
-</p>
+<div class="row h-auto">
+    <div class="col-sm-8 mx-auto">
+        <div class="card">
+            <div class="card-title bg-success text-white p-3">
+                <p class="h4">Task details</p>
+            </div>
+            <div class="card-body">
+                <div>
+                    Name: {{ object.name }}
+                </div>
+                <div class="mt-2">
+                    Description: {{ object.description }}
+                </div>
+                <div class="mt-2">
+                    Creator:
+                    <span class="badge badge-dark badge-pill p-2">{{ object.assigned_to }}</span>
+                </div>
+                <div class="mt-2">
+                    {% if object.assigned_to %}
+                    Assigned to:
+                    <span class="badge badge-primary badge-pill p-2">{{ object.assigned_to }}</span>
+                    {% else %}
+                    Not Assigned
+                    {% endif %}
+                </div>
+                <div class="mt-2">
+                    Status:
+                    <span class="badge badge-warning badge-pill p-2">{{ object.status }}</span>
+                </div>
+                <div class="mt-2">
+                    Tags:
+                    {% for tag in object.tags.all %}
+                    <span class="badge badge-info badge-pill p-2">{{ tag }}</span>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
